fix uncc variations menu text overflow bug.

--- a/variations/uncc/styles/full-site.css
+++ b/variations/uncc/styles/full-site.css
@@ -202,6 +202,13 @@
 	#header-menu ul > li > a {
 		text-align:center;
 		border:none;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+	}
+	
+	#header-menu ul ul > li > a {
+		white-space: normal;
+		text-overflow: clip;
 	}
 	
 	#header-menu ul ul > li {
